# hansli

./: .gitignore  README.md  autofix.yml  mychat.md  mychat.yml  pyproject.toml
src/hansli/: __init__.py  chat.py  config.py  context.py  executor.py  hansli.py  llm_openai.py  report.py  utils.py
src/hansli/config/: executor.yml
src/hansli/llm/: llm.py  llm_openai.py
src/hansli/preprompts/: autofix.md  autoimprove.md
tests/sources/: hello  hello.cpp
