[project]
name = "hansli"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Pauli", email = "dapaulid@gmail.com"},
]
dependencies = [
    "openai>=1.14.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
